--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react-icons": "^3.0.0",
     "animate.css": "^4.1.1",
     "axios": "^1.2.1",
+    "pdfmake": "^0.2.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.40.0",
