--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.10.5",
     "@hookform/resolvers": "^2.9.10",
     "@mui/material": "^5.10.17",
+    "@types/pdfmake": "^0.2.2",
     "@types/react-icons": "^3.0.0",
     "animate.css": "^4.1.1",
     "axios": "^1.2.1",
